# llm_trading

./: .env.example  .env.template  .gitignore  CLAUDE.md  COMPACTION_SUMMARY.md  DATA_FETCHER_SETUP.md  GEMINI_DESIGN_PROMPT.md  GUI-modifications.md  GUI_DESIGN.md  HANDOFF_CURRENT.md  HANDOFF_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PERPLEXITY_SIMPLIFICATION.md  PIPELINE.md  PM Pitch Schema v2 - Risk Normalization & Clean Execution.md  PRD.md  README.md  START-GUIDE.md  VERIFICATION_NOTES.md  VERIFICATION_SUMMARY.md  WEEKLY_RESEARCH.MD  build-progress.txt  check_openapi.py  cli.py  council_endpoints_test_report.md  gemini-deep-research.md  handoff_research_tab.md  peer_review_test_output.txt  pitch_endpoints_test_report.md  pyproject.toml  research_endpoints_test_report.md  start.sh  stocks_trading_basic.py  subtask-4-1-summary.md  subtask_5.6_completion_report.md  test_api_endpoint.sh  test_comparison_endpoint.py  (+9 more)
.claude/memory/: README.md  changelog.md  current-task.md  decisions.md
.github/workflows/: test.yml
.worktrees/023-add-status-badge-color-coding-for-trading-states/: QA_SESSION2_REPORT.md
backend/: __init__.py  auth.py  config.py  conversation_storage.py  council.py  council_trading.py  db_helpers.py  dependencies.py  http_pool.py  main.py  main.py.backup_2304_lines  migrate_db.py  migrate_pm_pitches.py  migrate_research_indexes.py  multi_alpaca_client.py  openrouter.py  redis_client.py  requesty_client.py  verify_snapshot.py
backend/alpaca_integration/: __init__.py  orders.py
backend/api/: __init__.py  conversations.py  council.py  market.py  monitor.py  pitches.py  research.py  trades.py
backend/cache/: __init__.py  (+3 more)
config/: assets.yaml  loader.py  models.yaml  providers.yaml  schedule.yaml  search.yaml
docs/: ALPACA_MULTI_ACCOUNT.md  API_ENDPOINTS.md  PERFORMANCE_METRICS.md  PIPELINE_STAGE_REFERENCE.md
frontend/: package-lock.json  package.json  vite.config.js
market/: alpaca_client.py
plans/: PMs_Tab_GUI_Modifications.md  architecture_diagram.md  deployment_plan.md
schemas/: chairman_decision.schema.json  execution_order.schema.json  graph_digest.schema.json  weekly_graph.schema.json
scripts/: backfill_graphs.py  init_db.py  sample_research_pack.json
storage/: schema.py
tests/: COVERAGE_ANALYSIS.md  README.md  __init__.py  conftest.py  smoke_test_endpoints.py  test_alpaca_client.py  test_alpaca_manager.py  test_async_db.py  test_async_redis_cache.py  test_checkpoint_integration.py  test_checkpoint_logic.py  test_checkpoint_workflow.py  test_concurrency.py  test_council_integration.py  test_council_parsing.py  test_council_ranking.py  test_council_stage1.py  test_council_stage2.py  test_council_stage3.py  test_db_pool.py  test_error_handling.py  test_execution_logic.py  test_fixtures.py  test_http_pool.py  test_load_pool.py  test_peer_review_db_save.py  test_peer_review_multiple.py  test_pitch_schema.py  test_pitch_validation.py  test_redis_pool.py  test_storage.py  test_trade_execution.py  test_weekly_pipeline.py
tools/: graph_extractor.py
(+122 files in other folders)
