[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "psycopg2-binary>=2.9.0",
    "alpaca-py>=0.43.2",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.0",
    "msgpack>=1.0.0",
]
