[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "psycopg2-binary>=2.9.0",
    "alpaca-py>=0.43.2",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
# To run with coverage: pytest --cov --cov-report=html --cov-report=term-missing

[tool.coverage.run]
source = ["backend", "market", "storage"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/migrations/*",
    "backend/config.py",
    "*/vendor/*",
    "*/.auto-claude/*",
]
branch = true
parallel = false

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
# Focus coverage on critical trading logic
include = [
    "backend/*.py",
    "backend/*/*.py",
    "market/*.py",
    "storage/*.py",
]

[tool.coverage.html]
directory = "htmlcov"
